@@ -1,4 +1,8 @@
 release 1.1.1-ea (2009-06)
+- Fixed issue 258
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=258
+  UriBuilder.replacePath(null) no longer throws IllegalArgument exception;
+  null parameter unsets existing path component
 - Fixed issue 306
   https://jersey.dev.java.net/issues/show_bug.cgi?id=306
   The support JSONObject and JSONArray should only work for JSON related
